move rest of dsim to the core